--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/ws": "^8.18.1",
+    "bcrypt": "^6.0.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.7.0",
     "typescript": "^5.8.3",
     "ws": "^8.18.2"
